--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,3 +1,16 @@
-#!/bin/bash
-touch new_file.txt
-echo "Hello from Pipeline"
+pipeline {
+    agent any
+
+    stages {
+        stage('Create a new file') {
+            steps {
+                sh 'touch new_file.txt'
+            }
+        }
+        stage('Print messege') {
+            steps {
+              echo 'Hello from pipeline'
+        }
+      }
+    }
+  }
